<resources>
    <string name="app_name">WeChatUI</string>
    <string name="login_tips">微信号/QQ/邮箱登录</string>
    <string name="account_tips">账号</string>
    <string name="psw_tips">密码</string>
    <string name="other_way">用手机号登录</string>
    <string name="login">登录</string>
    <string name="message">微信</string>
    <string name="friend">通讯录</string>
    <string name="find">发现</string>
    <string name="mine">我</string>


</resources>
