<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:text="@string/login_tips"
        android:padding="@dimen/padding"
        android:textSize="@dimen/first_tips_size"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:hint="@string/account_tips"
        />

    <EditText
        android:id="@+id/psw_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:hint="@string/psw_tips"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:padding="@dimen/padding"
        android:text="@string/other_way"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:layout_margin="@dimen/padding"
        android:textColor="@color/colorWhite"
        android:text="@string/login"/>

</LinearLayout>